added open and close functions to buttons for modal

--- a/setup/index.html
+++ b/setup/index.html
@@ -20,6 +20,15 @@
         <buttom class="btn modal-btn"> open modal </buttom>
       </div>
     </header>
+    <!--end of hero-->
+    <!--modal-->
+    <div class="modal-overlay">
+      <div class="modal-container"></div>
+      <h3>modal content</h3>
+      <button class="close-btn">
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
